Update layout of the view: By removing the forms and retain only one.Update the routes to be consistent with fetch api to make sure the list is updated without refreshingAdded update route for marking the tasks completeAdded fetch api in the scripts to update the items without refreshing pageUPdated the main app file with routers for ease of structure

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -177,6 +177,9 @@ button .icon {
   justify-content: space-between;
 }
 
+.tasks {
+  flex-direction: column;
+}
 .all-lists,
 .desktop-all-lists {
   justify-content: center;
@@ -325,6 +328,11 @@ button .icon {
   width: 10px;
   left: 3.6px;
   top: 5px;
+}
+
+/* delete button */
+.item .delete-button:hover {
+  cursor: pointer;
 }
 
 /* 
